# Windows-Auto-Night-Mode

./: .editorconfig  .gitignore  .gitmodules  .licenseheader  .vsconfig  CODEOWNERS  CODE_OF_CONDUCT.md  PRIVACY.md  README.md  Resources.fr.resx  Resources.uk.resx  Windows Auto Dark Mode.sln  Windows Auto Dark Mode.sln.licenseheader  Windows Auto-Night Mode.sln  WindowsAutoDarkMode.slnx  build_update_data.bat  crowdin.yml  generate_hash.ps1  nuget.config  publish-inject-updater-legacy-files.bat  publish.bat  version.xml  version.yaml  q!
.github/: DEVELOPMENT_NOTE.md  FUNDING.yml  PRIVACY.md  README.md  dependabot.yml
AutoDarkModeApp/: AboutWindow.xaml  AboutWindow.xaml.cs  App.config  App.xaml  App.xaml.cs  AutoDarkMode.VisualElementsManifest.xml  AutoDarkModeApp - Backup (1).csproj  AutoDarkModeApp - Backup.csproj  AutoDarkModeApp.csproj  AutoDarkModeApp.csproj.old  AutoDarkModeApp_ejyikozz_wpftmp.csproj  DesignTimeResources.xaml  DesktopBGui.xaml  DesktopBGui.xaml.cs  Extensions.cs  GlobalUsings.cs  LocationHandler.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindowMwpf.xaml  MainWindowMwpf.xaml.cs  MsgBox.xaml  MsgBox.xaml.cs  PInvoke.cs  Package.appinstaller  Package.appxmanifest  README.md  RegeditHandler.cs  Settings.cs  TaskShedHandler.cs  TemplateStudio.xml  Tools.cs  Updater.cs  Usings.cs  Ver10Updater.xaml  Ver10Updater.xaml.cs  app.manifest  appsettings.json
AutoDarkModeApp.Core/: AutoDarkModeApp.Core.csproj  README.md
AutoDarkModeComms/: AutoDarkModeComms.csproj  ICommandClient.cs  IMessageClient.cs  PipeClient.cs  Program.cs  ZeroMQClient.cs
AutoDarkModeConfig/: AdmConfig.cs  AdmConfigBuilder.cs  AdmLocationData.cs  AutoDarkModeConfig.csproj  Extensions.cs  Helper.cs  LastUpdate.cs  PostponeQueueDto.cs  UpdateInfo.cs  UpdaterData.cs
AutoDarkModeInstaller/: AutoDarkModeInstaller.wixproj  Product.wxs
AutoDarkModeLib/: AdmConfig.cs  AdmConfigBuilder.cs  AdmLocationData.cs  AutoDarkModeLib.csproj  Enums.cs  Flags.cs  Helper.cs  PostponeQueueDto.cs  UpdateInfo.cs  UpdaterData.cs
AutoDarkModeShell/: AutoDarkModeShell.csproj  ICommandClient.cs  PipeClient.cs  Program.cs  ZeroMQClient.cs
AutoDarkModeSvc/: AutoDarkModeSvc - Backup (1).csproj  AutoDarkModeSvc - Backup.csproj  AutoDarkModeSvc.csproj  BackgroundTask.cs  ComponentManager.cs  Extensions.cs  HttpClientProgressExtensions.cs  ModuleTimer.cs  NLog.xsd  Program.cs  Service.cs  SunDate.cs  ThemeManager.cs  TrayIcon.cs
AutoDarkModeUpdater/: AutoDarkModeUpdater.csproj  Extensions.cs  Program.cs  VersionSpecific.cs
AutoThemeChanger/: AboutWIndow.xaml.cs  AboutWindow.xaml  App.config  App.xaml  App.xaml.cs  AutoDarkMode.VisualElementsManifest.xml  AutoThemeChanger.csproj  DeskBGHandler.cs  DesktopBGui.xaml  DesktopBGui.xaml.cs  LocationHandler.cs  MainWindow.xaml  MainWindow.xaml.cs  MsgBox.xaml  MsgBox.xaml.cs  RegEditHandler.cs  Settings.cs  SunDate.cs  ThemeHelper.cs  Updater.cs  Ver10Updater.xaml  Ver10Updater.xaml.cs  packages.config  taskShedHandler.cs
AutoThemeChangerSvc/: AutoThemeChangerSvc.csproj  Service.cs
AutoThemeChangerUWP/: AutoThemeChangerUWP.wapproj  Package.appxmanifest  privacy.md
IThemeManager2Bridge/: IThemeManager2Bridge.csproj  Program.cs  ThemeDllWrapper.cs
adm-downloader-rs/: Cargo.toml  README.md  about.toml  build.rs  license.html
adm-downloader-rs/src/: main.rs
adm-updater-rs/: .gitignore  Cargo.toml  about.hbs  about.toml  build.rs  launch_vscode.bat  license.html
adm-updater-rs/bindings/: Cargo.toml  build.rs
adm-updater-rs/src/: comms.rs  extensions.rs  io.rs  io_v2.rs  io_v3.rs  license.rs  main.rs  regedit.rs
(+613 files in other folders)
