[package]
name = "adm-updater-rs"
version = "3.1.4"
authors = ["Sam <earthstamper@gmail.com>"]
edition = "2021"
license = "MIT"

[package.metadata.winres]
OriginalFilename = "AutoDarkModeUpdater"
LegalCopyright = "Copyright © 2024"
FileVersion = "3.1.6"
FileDescription = "Auto Dark Mode Updater"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
fern = "0.6.0"
log = "0.4.14"
chrono = "0.4.19"
named_pipe = "0.4.1"
whoami = "1.5.0"
sysinfo = "0.29.0"
walkdir = "2.3.2"
winreg = "0.10.1"
windows-permissions = "0.2.4"
platform-dirs = "0.3.0"
lazy_static = "1.4.0"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
]

[build-dependencies]
winres = "0.1.12"
static_vcruntime = "2.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
