[package]
name = "adm-updater-rs"
version = "4.0.1"
authors = ["Sam <earthstamper@gmail.com>"]
edition = "2021"
license = "MIT"

[package.metadata.winres]
OriginalFilename = "AutoDarkModeUpdater"
LegalCopyright = "Copyright © 2025"
FileVersion = "4.0.1"
FileDescription = "Auto Dark Mode Updater"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.2"
fern = "0.7.1"
log = "0.4.27"
chrono = "0.4.41"
named_pipe = "0.4.1"
whoami = "1.6.1"
sysinfo = "0.37.0"
walkdir = "2.5.0"
winreg = "0.55.0"
windows-permissions = "0.2.4"
platform-dirs = "0.3.0"
lazy_static = "1.5.0"

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
]

[dependencies.windows-strings]
version = "0.4"


[build-dependencies]
winres = "0.1.12"
static_vcruntime = "2.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
